chapter_hubble/manifest/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-httproute
  namespace: kube-system
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - hubble.cilium.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
